[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dglab-vibrate-controller"
version = "0.1.0"
description = "使用Python来实现对于负鼠振动控制器的控制"
readme = "README.md"
authors = [{name = "lindog114514", email = "kaikaihe467@gamil.com"}]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "bleak>=0.19.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lindog114514/DGLAB-vibrate-controller-python"

[tool.setuptools.packages.find]
include = ["dglab_vibrate_controller*"]