[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dglab-controller-python"
version = "0.1"
description = "一种用于控制负鼠振动控制器和读取灵猫和狼爪传感器的Python库"
readme = "README.md"
authors = [{name = "lindog114514", email = "kaikaihe467@gamil.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "bleak>=0.21.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lindog114514/DGLAB-vibrate-controller-python"

[tool.setuptools.packages.find]
include = ["dglab-controller-python*"]

[tool.setuptools]
universal = true