[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dglab-controller-python"
version = "0.1.0"
description = "用于控制负鼠振动控制器以及读取灵猫和爪印传感器的 Python 库"
readme = "README.md"
authors = [{name = "lindog114514", email = "kaikaihe467@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "bleak>=0.21.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lindog114514/DGLAB-controller-python"

[tool.setuptools.packages.find]
include = ["dg_lab_devices*"]